# cgm

./: .gitignore  CMakeLists.txt  LICENSE
include/geometry/: aabb.hpp  calculate.hpp  geo_core.hpp  geometry.hpp  lineSegment.hpp  plane.hpp  triangle.hpp
include/math/: eul.hpp  mat.hpp  quat.hpp  tolerance.hpp  utill.hpp  utils.hpp  vec.hpp  ​math.hpp
include/rotation/: eul.hpp
include/transform/: transform.hpp
scaffold/ExerciseSet/: 1-6chapter.md
scaffold/knowledge/c++/: c++编译过程.md  cmakeTest.md  struct构造函数.md  编译过程中的声明与定义.md  解决循环依赖的问题.md
scaffold/knowledge/other/: git.md
src/math/: quat.cpp  vec.cpp
tests/: CMakeLists.txt  tests.cpp  tests.h
tests/geometry_test/: aabb_test.h  calculate_test.h  plane_test.h  triangle_test.h
tests/math_test/: eul_test.h  mat_test.h  quat_test.h  vec_test.h
tests/trans_test/: transform_test.h
tests/utill/: utill.h
